# kume-agent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  alembic.ini  docker-compose.yml  notes.md  pyproject.toml
.github/workflows/: lint.yml  reviewdog.yml  tests.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_meals.py
docs/: nutri_telegram_agent_prd.md
docs/superpowers/specs/: 2026-04-11-bootstrap-skill-design.md  2026-04-11-phase1-telegram-bot-design.md  2026-04-11-phase2-context-ingestion-design.md  2026-04-12-message-debounce-design.md  2026-04-12-onboarding-ux-design.md  2026-04-12-structured-orchestrator-design.md
src/kume/: __main__.py
src/kume/domain/: __init__.py  context.py  conversation.py  entities.py  metrics.py
src/kume/infrastructure/: __init__.py  config.py  container.py  image_store.py  logging.py  metrics.py  request_context.py  session_store.py  streaming.py
src/kume/ports/: __init__.py
src/kume/services/: __init__.py  ingestion.py  orchestrator.py  prompts.py
tests/adapters/input/: test_message_batcher.py  test_status_messages.py  test_telegram_bot.py
tests/adapters/output/: test_audio_processor.py  test_image_processor.py  test_openai_vision.py  test_pdf_processor.py  test_postgres_db.py  test_telegram_formatting.py  test_telegram_messaging.py  test_whisper_stt.py
tests/adapters/tools/: conftest.py  test_analyze_food.py  test_analyze_food_image.py  test_ask_recommendation.py  test_fetch_lab_results.py  test_log_meal.py  test_process_lab_report.py  test_save_goal.py  test_save_health_context.py  (+4 more)
tests/domain/: test_context.py  test_conversation.py  test_entities.py  test_metrics.py
tests/evals/: conftest.py  helpers.py  langsmith_runner.py  test_edge_cases.py  test_intent_classification.py  test_language_handling.py  test_response_quality.py  test_smoke.py  test_tool_selection.py
tests/infrastructure/: test_config.py  test_container.py  test_image_store.py  test_logging.py  test_metrics.py  test_session_store.py  test_streaming.py
tests/integration/: test_phase3_flows.py
tests/ports/: test_database.py  test_messaging.py  test_repositories.py  test_resource_processor.py  test_speech_to_text.py  test_vision.py
tests/services/: test_ingestion.py  test_orchestrator.py
(+53 files in other folders)
